# sentinel

./: .gitignore  LICENSE  README.md  config.live.example.json  config.mock.json  pyproject.toml
docs/: ARCHITECTURE.md
src/sentinel/: __init__.py  __main__.py  config.py  guardrail.py  interfaces.py  probe.py
tests/: test_probe.py
